# job-radar

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: job-radar.yml
app/: main.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  company_source.py  job.py  job_match.py  job_notification.py
app/notifications/: discord.py
app/profiles/: __init__.py  default_profiles.py  search_profile.py
app/repositories/: company_source_repository.py  job_match_repository.py  job_notification_repository.py  job_repository.py
app/services/: job_ingestion_service.py  job_matching_service.py  job_radar_service.py  source_discovery_service.py  source_registry_service.py
app/sources/: ashby.py  base.py  config.py  factory.py  greenhouse.py  lever.py  seed_sources.py  source_config.py
data/: company_sources.csv  source_candidates.csv
migrations/: env.py
migrations/versions/: 010b6da6dc24_create_initial_tables.py  cf3ccfc944d7_add_company_sources.py
scripts/: discover_source.py  discover_sources.py  fetch_greenhouse.py  import_sources.py  ingest_greenhouse.py  init_db.py  match_jobs.py  notify_matches.py  register_source.py  run_job_radar.py  run_scheduler.py  seed_company_sources.py  show_profile.py
